<resources>
    <string name="app_name">Developers Breach</string>

    <!--  App Toolbar Titles  -->
    <string name="article_toolbar_title">ARTICLES</string>
    <string name="favorites_toolbar_title">FAVORITES</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="web_view_toolbar_title_contact">Contact</string>
    <string name="web_view_toolbar_title_github">GitHub</string>

    <!--  Main BottomNavigationMenu Titles  -->
    <string name="bottom_navigation_menu_title_posts">Posts</string>
    <string name="bottom_navigation_menu_title_search">Search</string>
    <string name="bottom_navigation_menu_title_favorite">Favorites</string>
    <string name="bottom_navigation_menu_title_settings">Settings</string>
    <string name="profile_menu_title">Profile</string>

    <!--  Search Fragment  -->
    <string name="no_search_results_found">No Results Found</string>
    <string name="search_articles_hint">Search Articles</string>

    <!--  DetailFragment Appbar Menu Items  -->
    <string name="bottom_appbar_menu_title_search">Search</string>
    <string name="bottom_appbar_menu_title_close">Close</string>
    <string name="bottom_appbar_menu_title_theme">Theme</string>
    <string name="bottom_appbar_menu_title_refresh">Refresh</string>
    <string name="bottom_appbar_menu_title_find_top">Top</string>
    <string name="bottom_appbar_menu_title_find_bottom">Bottom</string>

    <!--  WebView Fragment  -->
    <string name="search_query_dialog_title">Find The Query</string>
    <string name="search_query_dialog_positive_button">Find</string>
    <string name="search_query_dialog_negative_button">Cancel</string>
    <string name="enter_query_hint">Enter Query</string>
    <string name="search_query_error_message">Please Enter Query</string>

    <!--  DetailFragment  -->
    <string name="open_article_button_text">Open Article</string>

    <!--    FavoriteFragment-->
    <string name="no_favorites_found">No Favorites Found</string>

    <!--  SettingsFragment Preferences  -->
    <!--  Category Title  -->
    <string name="preference_category_title_article">Articles</string>
    <string name="preference_category_title_contact">Contact</string>
    <string name="preference_category_title_developer">Developer</string>
    <string name="preference_article_title_about">About</string>
    <!--  Preference Article Summary -->
    <string name="preference_summary_article_refresh">Keeps updated with new data from server.</string>
    <string name="preference_summary_article_delete">This will delete all your favorite articles.</string>
    <string name="preference_summary_article_contact">Submit email on what article i should write next.</string>
    <string name="preference_summary_article_developer">Articles wrote by me here are available as open source, take a look at it.</string>
    <string name="preference_summary_article_about">See what this app is about.</string>
    <!--  Preference Article Title -->
    <!--  Theme List Preference Dialog Title  -->
    <string name="preference_article_title_refresh">Refresh</string>
    <string name="preference_article_title_contact">Open Submit Form</string>
    <string name="preference_article_title_developer">Open Github</string>
    <!--  Dialog Article Titles  -->
    <string name="preference_article_title_delete">Delete Articles</string>
    <string name="refresh_article_dialog_title">Refresh Favorites ?</string>
    <string name="refresh_article_dialog_message">Choosing Refresh Will Remove All Article Data And
        Updates With New Data. Perform this Only Once A Day.</string>
    <string name="refresh_article_dialog_positive_button">Refresh</string>
    <string name="refresh_article_dialog_negative_button">Cancel</string>
    <string name="about_app_dialog_title">About App</string>
    <string name="about_app_dialog_message">This app pulls data from web page developersbreach.com
    which shows data in form of list in fragment. This app is not useful for regular users and made
    particularly for app developers.</string>
    <!--  Dialog Delete Article  -->
    <string name="delete_article_dialog_title">Delete Favorites ?</string>
    <string name="delete_article_dialog_message">Choosing Delete Will Remove All Your Favorite Articles.</string>
    <string name="delete_article_dialog_positive_button">Delete</string>
    <string name="delete_article_dialog_negative_button">Cancel</string>

    <!--  App Snackbar Message's  -->
    <string name="snackbar_added_to_favorites_message">Added to Favorites</string>
    <string name="snackbar_removed_favorite_message">Removed From Favorites</string>
    <string name="snackbar_refresh_articles_message">Refresh Completed</string>
    <string name="snackbar_delete_articles_message">Deleted All Articles</string>

    <!--  Show no internet text  -->
    <string name="no_internet_connection">No Internet</string>

    <!--  WebView URL's in WebViewFragment  -->
    <string name="url_site_contact">https://developersbreach.com/contact/</string>
    <string name="url_site_developer">https://github.com/RajashekarRaju</string>

    <!--    Content Description-->
    <string name="article_image_content_description">Article Image</string>
    <string name="add_favorite_button_content_description">Add Article To Favorites Button</string>
    <string name="delete_favorite_button_content_description">Delete Article From Favorites Button</string>
    <string name="search_button_content_description">Static Article Search Button</string>

    <!--  Author Name  -->
    <string name="author_name">Rajasekhar</string>

</resources>
