<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preference_category_title_contact">

        <Preference
            app:icon="@drawable/ic_contact"
            app:key="ContactFormKey"
            app:summary="@string/preference_summary_article_contact"
            app:title="@string/preference_article_title_contact" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preference_category_title_article">

        <Preference
            app:icon="@drawable/ic_refresh"
            app:key="RefreshArticlesKey"
            app:summary="@string/preference_summary_article_refresh"
            app:title="@string/preference_article_title_refresh" />

        <Preference
            app:icon="@drawable/ic_delete_all"
            app:key="DeleteAllFavoritesKey"
            app:summary="@string/preference_summary_article_delete"
            app:title="@string/preference_article_title_delete" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_category_title_developer">

        <Preference
            app:icon="@drawable/ic_developer"
            app:key="DeveloperProjectKey"
            app:summary="@string/preference_summary_article_developer"
            app:title="@string/preference_article_title_developer" />

        <Preference
            app:icon="@drawable/ic_about"
            app:key="AboutProjectKey"
            app:summary="@string/preference_summary_article_about"
            app:title="@string/preference_article_title_about" />

    </PreferenceCategory>

</PreferenceScreen>